syntax = "proto3";
package raft;

service RaftService {
  // RequestVote: Used by candidates to gather votes
  rpc RequestVote (VoteRequest) returns (VoteResponse);
  
  // AppendEntries: Used by leaders to replicate log entries and send heartbeats
  rpc AppendEntries (AppendEntriesRequest) returns (AppendEntriesResponse);
}

message VoteRequest {
  uint64 term = 1;
  uint64 candidate_id = 2;
  uint64 last_log_index = 3;
  uint64 last_log_term = 4;
}

message VoteResponse {
  uint64 term = 1;
  bool vote_granted = 2;
}

message AppendEntriesRequest {
  uint64 term = 1;
  uint64 leader_id = 2;
  uint64 prev_log_index = 3;
  uint64 prev_log_term = 4;
  uint64 leader_commit = 5;
  repeated LogEntry entries = 6;
}

message LogEntry {
  uint64 term = 1;
  uint64 index = 2;
  bytes command = 3; 
}

message AppendEntriesResponse {
  uint64 term = 1;
  bool success = 2;
}